--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <ul>
             <li>List one item</li>
             <li>List two items</li>
+            <li>I need to add to git</li>
         </ul>
 
 <script src="app.js"></script>
